--- a/src/main.scss
+++ b/src/main.scss
@@ -8,7 +8,43 @@ $ncsu: #cc0000;
 $ncsu-invert: findColorInvert($primary);
 
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
-$custom-colors: (
+$colors: (
+    "white": (
+        $white,
+        $black
+    ),
+    "black": (
+        $black,
+        $white
+    ),
+    "light": (
+        $light,
+        $light-invert
+    ),
+    "dark": (
+        $dark,
+        $dark-invert
+    ),
+    "primary": (
+        $primary,
+        $primary-invert
+    ),
+    "info": (
+        $info,
+        $info-invert
+    ),
+    "success": (
+        $success,
+        $success-invert
+    ),
+    "warning": (
+        $warning,
+        $warning-invert
+    ),
+    "danger": (
+        $danger,
+        $danger-invert
+    ),
     "ncsu": (
         $ncsu,
         $ncsu-invert
@@ -23,6 +59,19 @@ $link-focus-border: $primary;
 // Set the padding on the container
 $gap: 128px;
 
+// Set padding on sections
+$section-padding: 1.5rem 1.5rem 0rem;
+
+// Set more reasonable padding on footer
+$footer-padding: 3rem 1.5rem 1.5rem;
+
 // Import Bulma and Buefy styles
-@import "~bulma";
+@import "~bulma/bulma";
 @import "~buefy/src/scss/buefy";
+
+// Special settings to make sure the footer grows to full height
+html,
+body,
+#app {
+    min-height: 100vh;
+}
