--- a/src/main.scss
+++ b/src/main.scss
@@ -56,6 +56,11 @@ $link: $primary;
 $link-invert: $primary-invert;
 $link-focus-border: $primary;
 
+// Input updates so they aren't red
+$input-focus-border-color: $info;
+$input-focus-box-shadow-color: rgba($info, 0.25);
+$input-arrow: $info;
+
 // Set the padding on the container
 $gap: 128px;
 
